# SZE-MOSZE-2020-Git-egylet

./: Blood_Raven.json  Character.cpp  Character.h  Character_8h_source.html  Damage.cpp  Damage.h  Damage_8h_source.html  Dark_Wanderer.json  Fallen.json  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  JsonParser.cpp  JsonParser.h  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  Player.cpp  Player.h  Readme.md  Report.md  Zombie.json  annotated.html  classGame-members.html  classGame.html  classGame_1_1AlreadyHasHeroException-members.html  classGame_1_1AlreadyHasHeroException.html  (+68 more)
.github/workflows/: Levelup_Test.yml  Newtest.yml  Test.yml  pushdocs.yml  (+6 more)
docker/: dox_docker  sca_docker  test_docker.txt  unittest_docker
scenarios/: output1.txt  output1_final.txt  output2.txt  scenario2.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+18 more)
tests/: CMakeLists.txt  directions.sh  final_inout.sh  gtests.sh  gtests_good_output.txt  task2.sh  task4_inout.sh  unit_test.cpp  unit_tests.cpp  unit_tests_make.sh
tests/damage_tests/: CMakeLists.txt  unit_tests_damage.cpp
tests/game_tests/: CMakeLists.txt  unit_tests_game.cpp
tests/hero_tests/: CMakeLists.txt  unit_tests_hero.cpp
tests/json_tests/: CMakeLists.txt  unit_tests_json.cpp
tests/map_tests/: CMakeLists.txt  unit_tests_map.cpp
tests/markedmap_tests/: CMakeLists.txt  unit_tests_markedmap.cpp
tests/monster_tests/: CMakeLists.txt  unit_tests_monster.cpp
units/: CMakeLists.txt  Maple.json  Player_1_Kakarott.json  Player_2_Sally.json  Player_3_Maple.json  directions.txt  good_output.txt  unit_test.cpp  unit_test_1.json  unit_test_2.json  unit_test_3.json
(+5 files in other folders)
